<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/tvInstructions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="24dp"
        android:text="@string/home_instructions"
        android:textColor="@color/text_gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTapToRecord"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="350dp"
        android:layout_marginEnd="150dp"
        android:background="@drawable/bg_tap_to_record"
        android:gravity="center"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/tap_to_record"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/tvArrows"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55" />

    <TextView
        android:id="@+id/tvArrows"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:lineSpacingExtra="-4dp"
        android:text="⌄&#10;⌄&#10;⌄"
        android:textColor="@color/text_gray"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/rowButtons"
        app:layout_constraintEnd_toEndOf="@id/tvTapToRecord"
        app:layout_constraintStart_toStartOf="@id/tvTapToRecord"
        app:layout_constraintTop_toBottomOf="@id/tvTapToRecord" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rowButtons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvArrows">

        <ImageButton
            android:id="@+id/btnRecord"
            android:layout_width="99dp"
            android:layout_height="97dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/bg_record_button"
            android:contentDescription="@string/btn_record"
            android:padding="20dp"
            android:scaleType="centerInside"
            android:src="@android:drawable/ic_btn_speak_now"
            app:layout_constraintBottom_toTopOf="@id/tvRecordLabel"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/divider"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.24" />

        <TextView
            android:id="@+id/tvRecordLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/btn_record"
            android:textColor="@color/text_dark"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/btnRecord"
            app:layout_constraintStart_toStartOf="@id/btnRecord"
            app:layout_constraintTop_toBottomOf="@id/btnRecord" />

        <View
            android:id="@+id/divider"
            android:layout_width="32dp"
            android:layout_height="1dp"
            android:background="@drawable/dashed_divider"
            app:layout_constraintBottom_toBottomOf="@id/btnRecord"
            app:layout_constraintEnd_toStartOf="@id/btnVideo"
            app:layout_constraintStart_toEndOf="@id/btnRecord"
            app:layout_constraintTop_toTopOf="@id/btnRecord" />

        <ImageButton
            android:id="@+id/btnVideo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="40dp"
            android:background="@drawable/bg_video_button"
            android:contentDescription="@string/btn_video"
            android:padding="18dp"
            android:scaleType="centerInside"
            android:src="@android:drawable/ic_menu_camera"
            app:layout_constraintBottom_toTopOf="@id/tvVideoLabel"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/divider"
            app:layout_constraintTop_toTopOf="@id/btnRecord"
            app:layout_constraintWidth_percent="0.2" />

        <TextView
            android:id="@+id/tvVideoLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/btn_video"
            android:textColor="@color/text_dark"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/btnVideo"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/btnVideo"
            app:layout_constraintTop_toBottomOf="@id/btnVideo" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>